# TameParse

./: .gitignore  .hgignore  .hgtags  COPYING  Makefile.am  README.md  config.h.in  configure.ac  configure.scan
Compiler/: compilation_stage.cpp  compilation_stage.h  compiler.cpp  compiler.h  console.cpp  console.h  error.cpp  error.h  language_compiler.cpp  language_compiler.h  language_stage.cpp  language_stage.h  lexer_compiler.cpp  lexer_compiler.h  lexer_stage.cpp  lexer_stage.h  lr_parser_compiler.cpp  lr_parser_compiler.h  lr_parser_stage.cpp  lr_parser_stage.h  output_stage.cpp  output_stage.h  std_console.cpp  std_console.h
ContextFree/: ebnf_items.cpp  ebnf_items.h  grammar.cpp  grammar.h  guard.cpp  guard.h  item.cpp  item.h  rule.cpp  rule.h  standard_items.cpp  standard_items.h  terminal_dictionary.cpp  terminal_dictionary.h
Dfa/: accept_action.cpp  accept_action.h  basic_lexer.cpp  basic_lexer.h  character_lexer.cpp  character_lexer.h  epsilon.cpp  epsilon.h  hard_coded_symbol_table.cpp  hard_coded_symbol_table.h  lexeme.cpp  lexeme.h  lexer.cpp  lexer.h  ndfa.cpp  ndfa.h  ndfa_regex.cpp  ndfa_regex.h  ndfa_state.cpp  ndfa_state.h  ndfa_transformations.cpp  position.cpp  position.h  range.cpp  range.h  remapped_symbol_map.cpp  remapped_symbol_map.h  state.cpp  state.h  state_machine.cpp  state_machine.h  symbol_map.cpp  symbol_map.h  symbol_set.cpp  symbol_set.h  symbol_table.cpp  symbol_table.h  symbol_translator.cpp  symbol_translator.h  transition.cpp  (+1 more)
Examples/: AnsiC.tp  AnsiC.txt  C99.tp  ContextSensitive.tp  ContextSensitive.txt  Makefile.am  Pascal.tp  Pascal.txt  run-tests.sh
Examples/JsonPrettyPrinter/: Makefile.am  json.tp  json_format.cpp
Language/: block.cpp  block.h  bootstrap.cpp  bootstrap.h  bootstrap_language.sh  build_defn.sh  (+31 more)
Runtimes/C/: Makefile.am  binaryformat.h  cparse.c  cparse.h  cparse_internal.h  lex.c  lookahead.c  lr.c
TameParse/: Makefile.am  TameParse.h  common.h  stl_templates.cpp  stl_templates.h  templates.cpp  templates.h  version.cpp  version.h
TameParse/Compiler/: compilation_stage.cpp  compilation_stage.h  conflict_attribute_rewriter.cpp  conflict_attribute_rewriter.h  console.cpp  console.h  error.cpp  error.h  import_stage.cpp  import_stage.h  language_builder_stage.cpp  language_builder_stage.h  language_stage.cpp  language_stage.h  lexer_stage.cpp  lexer_stage.h  lr_parser_stage.cpp  lr_parser_stage.h  output_stage.cpp  output_stage.h  output_stage_data.h  parser_stage.cpp  parser_stage.h  precedence_block_rewriter.cpp  precedence_block_rewriter.h  std_console.cpp  std_console.h  test_stage.cpp  test_stage.h
TameParse/Compiler/Data/: lexer_data.cpp  lexer_data.h  lexer_item.cpp  lexer_item.h  rule_item_data.cpp  rule_item_data.h
TameParse/Compiler/OutputStages/: binary.cpp  binary.h  cplusplus.cpp  cplusplus.h
TameParse/ContextFree/: ebnf_items.cpp  ebnf_items.h  grammar.cpp  grammar.h  guard.cpp  guard.h  item.cpp  item.h  item_set.cpp  item_set.h  rule.cpp  rule.h  standard_items.cpp  standard_items.h  terminal_dictionary.cpp  terminal_dictionary.h
TameParse/Dfa/: accept_action.cpp  accept_action.h  basic_lexer.cpp  basic_lexer.h  character_lexer.cpp  character_lexer.h  epsilon.cpp  epsilon.h  hard_coded_symbol_table.cpp  hard_coded_symbol_table.h  lexeme.cpp  lexeme.h  lexer.cpp  lexer.h  ndfa.cpp  ndfa.h  ndfa_regex.cpp  ndfa_regex.h  ndfa_transformations.cpp  position.cpp  position.h  range.cpp  range.h  regex_error.cpp  regex_error.h  remapped_symbol_map.cpp  remapped_symbol_map.h  state.cpp  state.h  state_machine.cpp  state_machine.h  symbol_map.cpp  symbol_map.h  symbol_set.cpp  symbol_set.h  symbol_table.cpp  symbol_table.h  symbol_translator.cpp  symbol_translator.h  transition.cpp  (+1 more)
TameParse/Language/: block.cpp  block.h  bootstrap.cpp  bootstrap.h  bootstrap_language.sh  build_defn.sh  definition.tp  definition.txt  definition_file.cpp  definition_file.h  ebnf_item.cpp  ebnf_item.h  ebnf_item_attributes.cpp  ebnf_item_attributes.h  formatter.cpp  formatter.h  grammar_block.cpp  grammar_block.h  import_block.cpp  import_block.h  language_block.cpp  language_block.h  language_parser.cpp  language_parser.h  language_unit.cpp  language_unit.h  lexeme_definition.cpp  lexeme_definition.h  lexer_block.cpp  lexer_block.h  nonterminal_definition.cpp  nonterminal_definition.h  parser_block.cpp  parser_block.h  precedence_block.cpp  precedence_block.h  precedence_definition.cpp  precedence_definition.h  process.cpp  process.h  (+8 more)
TameParse/Lr/: action_rewriter.cpp  action_rewriter.h  ast_parser.cpp  ast_parser.h  conflict.cpp  conflict.h  ignored_symbols.cpp  ignored_symbols.h  lalr_builder.cpp  lalr_builder.h  lalr_machine.cpp  lalr_machine.h  lalr_state.cpp  lalr_state.h  lr1_item_set.cpp  lr1_item_set.h  lr1_rewriter.cpp  lr1_rewriter.h  lr_action.cpp  lr_action.h  lr_item.cpp  lr_item.h  lr_state.cpp  lr_state.h  parser.cpp  parser.h  parser_stack.cpp  parser_stack.h  parser_state.h  parser_tables.cpp  parser_tables.h  precedence_rewriter.cpp  precedence_rewriter.h  weak_symbols.cpp  weak_symbols.h
TameParse/Unicode/: unicode.pl  unicode_data.h
TameParse/Util/: astnode.cpp  astnode.h  container.cpp  container.h  stringreader.cpp  stringreader.h  syntax_ptr.cpp  syntax_ptr.h  unicode.cpp  unicode.h  utf8reader.cpp  utf8reader.h
Test/: Makefile.am  contextfree_firstset.cpp  contextfree_firstset.h  contextfree_followset.cpp  contextfree_followset.h  dfa_multi_regex.cpp  dfa_multi_regex.h  dfa_ndfa.cpp  dfa_ndfa.h  dfa_range.cpp  dfa_range.h  dfa_single_regex.cpp  dfa_single_regex.h  dfa_symbol_deduplicate.cpp  dfa_symbol_deduplicate.h  dfa_symbol_set.cpp  dfa_symbol_set.h  dfa_symbol_translator.cpp  dfa_symbol_translator.h  language_bootstrap.cpp  language_bootstrap.h  language_primary.cpp  language_primary.h  lr_lalr_general.cpp  lr_lalr_general.h  lr_weaksymbols.cpp  lr_weaksymbols.h  main.cpp  runtime_c.cpp  runtime_c.h  test_fixture.cpp  test_fixture.h
bootstrap/: Makefile.am  bootstrap.1  main.cpp
parsetool/: Makefile.am  boost_console.cpp  boost_console.h  main.cpp  tameparse.1
(+113 files in other folders)
