AUTOMAKE_OPTIONS 	= foreign
SUBDIRS 			= bootstrap TameParse Test parsetool Examples doxy

EXTRA_DIST			= TameParseLib/Parse-Prefix.pch \
					  TameParseLib/TameParseLibProj.xcconfig \
					  TameParseLib/TameParsePriv.h \
					  TameParseLib/TameParse.cpp \
					  TameParseLib/TameParseLibTarget.xcconfig \
					  TameParseLib/TameParsePub.h \
					  TameParseLib/TameParse.xcodeproj/project.pbxproj \
					  TameParseLib/TameParse.xcodeproh/project.xcworkspace\contents.xcworkspacedata
