libTameParseC_VERSION       = 1:0:0
libTameParseC_CFLAGS        = -ansi -pedantic
lib_LTLIBRARIES             = libTameParseC.la

libTameParseC_la_SOURCES    =                       \
                                cparse.h            \
                                cparse_internal.h   \
                                cparse.c            \
                                lex.c               \
                                lr.c                \
                                binaryformat.h
